z-index fix++

--- a/css/branding.css
+++ b/css/branding.css
@@ -36,10 +36,7 @@ html, body {
     padding: 0;
 }
 body {
-    /*background-position: center;
-    background-image: url(img/background.jpg);
-    background-size: contain;*/
-    background-color: #808080;
+    background-color: rgb(32,32,32);
     min-height: 100vh;
 }
 ::selection, ::-moz-selection {
