--- a/css/navigation.css
+++ b/css/navigation.css
@@ -5,6 +5,7 @@
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 9999;
 }
 #topnav a {
     color: rgb(200,200,200);
